changes from last month

--- a/Studio Art.html
+++ b/Studio Art.html
@@ -11,18 +11,19 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--Your CSS-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gridGD.css">
 
-    <title>Camryn Melendez</title>
-    <meta name="description" content="My website">
+    <title>Studio Art</title>
+    <meta name="description" content="Studio Art page">
     <meta name="author" content="Camryn Melendez">
 
 </head>
 
 <body>
-    <h1 style="color: cadetblue;">Studio Art page coming soon!</h1>
-    <div>
-        <img src="images/IMG_4001.jpg" width="320" height="400" 
-        alt="Watercolor painting of a women covered in paint">
-    </div>
+        <div class="container">
+            <div class="header">Studio Art</div>
+            <div class="content">
+              <p class="object">Lorem ipsum dolor sit amet...</p>
+            </div>
+        </div>
 </body>
