--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -36,7 +36,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="Studio Art.html">Studio Art</a>
-                        <a class="dropdown-item" href="#">Graphic Design</a>
+                        <a class="dropdown-item" href="graphicdesign.html">Graphic Design</a>
                         <div class="dropdown-divider"></div>
                     </div>
                 </li>
@@ -46,14 +46,14 @@
                         Computer Science
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Skills</a>
-                        <a class="dropdown-item" href="#">Experience</a>
-                        <a class="dropdown-item" href="#">Projects</a>
+                        <a class="dropdown-item" href="csskills.html">Skills</a>
+                        <a class="dropdown-item" href="csexperience.html">Experience</a>
+                        <a class="dropdown-item" href="csprojects.html">Projects</a>
                         <div class="dropdown-divider"></div>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
@@ -63,39 +63,42 @@
     </h1> -->
     <div class="jumbotron">
         <h1 class="display-4">Camryn Melendez</h1>
-        <p class="lead">Artist + Software Engineer</p>
+        <p class="lead">Software Engineer + Artist</p>
         <hr class="my-4">
         <p>Student in Khoury College of Computer Sciences at Northeastern University</p>
     </div>
     <div class="container">
         <div class="row">
             <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg" class="card-img-top" alt="...">
+                <img src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg" class="card-img-top" 
+                alt="Vintage inspired 50's housewife zombie poster made in illustrator">
                 <div class="card-body">
                     <h5 class="card-title">Graphic Design</h5>
                     <p class="card-text">Explore graphic design projects from 2016 to present.</p>
-                    <a href="#" class="btn btn-primary">Let's go!</a>
+                    <a href="graphicdesign.html" class="btn btn-primary">Let's go!</a>
                 </div>
             </div>
             <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img src="images/IMG_3011.jpg" class="card-img-top" alt="...">
+                <img src="images/IMG_3011.jpg" class="card-img-top" 
+                alt="Oil pastel drawing of uniquely colored apricots">
                 <div class="card-body">
                     <h5 class="card-title">Studio Art</h5>
                     <p class="card-text">View atwork from 2014 to present in a variety of mediums.</p>
-                    <a href="#" class="btn btn-primary">Let's go!</a>
+                    <a href="Studio Art.html" class="btn btn-primary">Let's go!</a>
                 </div>
             </div>
             <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/northeastern.jpg" class="card-img-top" 
+                alt="Photograph of Northeastern University campus in the spring">
                 <div class="card-body">
-                    <h5 class="card-title">Computer Science</h5>
-                    <p class="card-text">Learn more about various projects and relevent skills.</p>
-                    <a href="#" class="btn btn-primary">Let's go!</a>
+                    <h5 class="card-title">About Me!</h5>
+                    <p class="card-text">Learn more about who I am and how I got to where I am now.</p>
+                    <a href="about.html" class="btn btn-primary">Let's go!</a>
                 </div>
             </div>
         </div>
     </div>
-    <h6 style="text-align-last: center">HI THIS WEBSITE WAS MADE BY ME FOR ME</div>
+    <h6 style="text-align-last: center ;padding: 10px; color: white">This website was created by Camryn Melendez</div>
     </h6>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
