updated studio and graphic

--- a/Studio Art.html
+++ b/Studio Art.html
@@ -11,7 +11,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--Your CSS-->
-    <link rel="stylesheet" href="gridGD.css">
+    <link rel="stylesheet" href="styles.css">
 
     <title>Studio Art</title>
     <meta name="description" content="Studio Art page">
@@ -20,10 +20,21 @@
 </head>
 
 <body>
-        <div class="container">
-            <div class="header">Studio Art</div>
-            <div class="content">
-              <p class="object">Lorem ipsum dolor sit amet...</p>
-            </div>
-        </div>
+    <div class="header" >
+        <h1>
+            Studio Art
+        </h1>
+        <p class= "p">All artwork created by Camryn Melendez</p>
+    </div>
+    <img src="images/StudioArt (2).jpg" 
+            alt="Monster girl painted with watercolors" height="400" >
+    <img  src="images/StudioArt.jpg" 
+            alt="Peaches drawn with oil pastel" height="400" >
+    <img src="images/GreenStature.jpg" 
+            alt="Decaying copper statue" height="400" >
+    <img  src="images/PurpleFLowers.jpg" 
+            alt="Black and white flowers on purple background" height="400" >
+    <img  src="images/SadBoy.jpg" 
+            alt="Sad boy drawn in oil pastel" height="400" >
+
 </body>
