--- a/index.html
+++ b/index.html
@@ -58,16 +58,19 @@
             </ul>
         </div>
     </nav>
+
+
     <!-- <h1 class="header"> 
         Camryn Melendez
     </h1> -->
-    <div class="jumbotron">
+    <div class="jumbotron" >
         <h1 class="display-4">Camryn Melendez</h1>
         <p class="lead">Software Engineer + Artist</p>
         <hr class="my-4">
         <p>Student in Khoury College of Computer Sciences at Northeastern University</p>
     </div>
-    <div class="container">
+
+    <div class="container" style="padding-top: 100px">
         <div class="row">
             <div class="card col-12 col-md-4" style="width: 18rem;">
                 <img src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg" class="card-img-top" 
@@ -79,7 +82,7 @@
                 </div>
             </div>
             <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img src="images/IMG_3011.jpg" class="card-img-top" 
+                <img src="images/BlueDoor.jpg" class="card-img-top" 
                 alt="Oil pastel drawing of uniquely colored apricots">
                 <div class="card-body">
                     <h5 class="card-title">Studio Art</h5>
@@ -88,7 +91,7 @@
                 </div>
             </div>
             <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img src="images/northeastern.jpg" class="card-img-top" 
+                <img src="images/san diego.jpg" class="card-img-top" 
                 alt="Photograph of Northeastern University campus in the spring">
                 <div class="card-body">
                     <h5 class="card-title">About Me!</h5>
@@ -98,6 +101,7 @@
             </div>
         </div>
     </div>
+
     <h6 style="text-align-last: center ;padding: 10px; color: white">This website was created by Camryn Melendez</div>
     </h6>
     <!-- Optional JavaScript -->
