--- a/about.html
+++ b/about.html
@@ -18,18 +18,16 @@
         </div>
         <p class= "p2">
                 This website was created in Visual Studio code, written in HTML and CSS I self taught myself
-                from the internet. I started coding at the beginning of my freshman year at Northeastern and 
-                haven't stopped since. I have too many unanswered questions... there is no time to waste!
+                from the internet.
             </p>
             <p class= "p2" style="padding-top: 20">
-                    In all seriousness, I an aspiring software developer with a passion for art and design. I love
+                    I an aspiring software developer with a passion for art and design. I love
                     the creativity and problem solving involved in writing programs, and I am hoping to continue
                     to grow my technical skills so that I can write more complex elegant programs in the future.
              </p>
              <div>
-                    <iframe width= "700" height= "500" class="resume"
-                    src="images/ResumeFinal.pdf" alt="my resume written in microsoft word"></iframe>
-             </div>
+
+             
             
 
     </body>
