updated studio art layout

--- a/Studio Art.html
+++ b/Studio Art.html
@@ -26,15 +26,49 @@
         </h1>
         <p class= "p">All artwork created by Camryn Melendez</p>
     </div>
-    <img src="images/StudioArt (2).jpg" 
+    <div class="imgItem">
+        <p> Water color and colored pencil. 2016, San Diego, CA.
+        </p>
+        <img src="images/StudioArt (2).jpg" 
             alt="Monster girl painted with watercolors" height="400" >
-    <img  src="images/StudioArt.jpg" 
-            alt="Peaches drawn with oil pastel" height="400" >
-    <img src="images/GreenStature.jpg" 
+    </div>
+
+    <div class="imgItem">
+        <p>
+            Oil Pastel. 2017, San Diego, CA. 
+            Displayed in the 2017 Young Art exhibition
+            at the San Diego Museum of Art.
+        </p>
+        <img  src="images/StudioArt.jpg" 
+                    alt="Peaches drawn with oil pastel" height="400" >
+    </div>
+
+    <div class="imgItem">
+        <p>
+            Acyrylic and Water. 2017, San Diego, CA. Background created with 
+            dripping water effect and copper colored paint.
+        </p>
+        <img src="images/GreenStature.jpg" 
             alt="Decaying copper statue" height="400" >
-    <img  src="images/PurpleFLowers.jpg" 
-            alt="Black and white flowers on purple background" height="400" >
-    <img  src="images/SadBoy.jpg" 
+    </div>              
+
+    <div class="imgItem"> 
+        <p>
+            Charcoal overlay on tempera. 2016, San Diego, CA. 
+            Gold flecks created by dabbing a crumples paper towel in
+            gold paint and stamping.
+        </p>
+        <img  src="images/PurpleFLowers.jpg" 
+                    alt="Black and white flowers on purple background" height="400" >
+    </div>
+    <div class="imgItem">    
+        <p>
+            Oil Pastel. 2016, San Diego, CA. Details achieved by 
+            scratching the pastel with an xacto knife, creating
+            sharp lines.
+        </p>
+        <img  src="images/SadBoy.jpg" 
             alt="Sad boy drawn in oil pastel" height="400" >
+    </div>
 
 </body>
