--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
             <img width= 500 src="images/me.jpg" alt="a photo of me">
         </div>
         <p class= "p2">
-                This website was created in Visual Studio code, written in HTML and CSS I self taught myself
-                from the internet.
+                This website was created in Visual Studio code, written in HTML and CSS.
             </p>
             <p class= "p2" style="padding-top: 20">
                     I an aspiring software developer with a passion for art and design. I love
