applied layout to more pages

--- a/Studio Art.html
+++ b/Studio Art.html
@@ -21,14 +21,13 @@
 
 <body>
     <div class="header" >
-        <h1>
+        <p>
             Studio Art
-        </h1>
-        <p class= "p">All artwork created by Camryn Melendez</p>
+        </p>
+        <p class= "subheading">All artwork created by Camryn Melendez</p>
     </div>
     <div class="imgItem">
-        <p> Water color and colored pencil. 2016, San Diego, CA.
-        </p>
+        <p> Water color and colored pencil. 2016, San Diego, CA.</p>
         <img src="images/StudioArt (2).jpg" 
             alt="Monster girl painted with watercolors" height="400" >
     </div>
