--- a/Studio Art.html
+++ b/Studio Art.html
@@ -29,7 +29,7 @@
     <div class="imgItem">
         <p> Water color and colored pencil. 2016, San Diego, CA.</p>
         <img src="images/StudioArt (2).jpg" 
-            alt="Monster girl painted with watercolors" height="400" >
+            alt="Monster girl painted with watercolors" width="400">
     </div>
 
     <div class="imgItem">
@@ -39,7 +39,7 @@
             at the San Diego Museum of Art.
         </p>
         <img  src="images/StudioArt.jpg" 
-                    alt="Peaches drawn with oil pastel" height="400" >
+                    alt="Peaches drawn with oil pastel" width="400">
     </div>
 
     <div class="imgItem">
@@ -48,7 +48,7 @@
             dripping water effect and copper colored paint.
         </p>
         <img src="images/GreenStature.jpg" 
-            alt="Decaying copper statue" height="400" >
+            alt="Decaying copper statue" width="400" >
     </div>              
 
     <div class="imgItem"> 
@@ -58,7 +58,7 @@
             gold paint and stamping.
         </p>
         <img  src="images/PurpleFLowers.jpg" 
-                    alt="Black and white flowers on purple background" height="400" >
+                    alt="Black and white flowers on purple background" width="400" >
     </div>
     <div class="imgItem">    
         <p>
@@ -67,7 +67,13 @@
             sharp lines.
         </p>
         <img  src="images/SadBoy.jpg" 
-            alt="Sad boy drawn in oil pastel" height="400" >
+            alt="Sad boy drawn in oil pastel" width="400" >
+    </div>
+    <div class="imgItem">
+        <p> Acrylic on Canvas Board. 2017, San Diego, CA.</p>
+        <img src="images\BlueDoor.jpg" 
+            alt="Blue rusted door painting" width="400">
+
     </div>
 
 </body>
