added back to top btn

--- a/Studio Art.html
+++ b/Studio Art.html
@@ -17,6 +17,15 @@
     <meta name="description" content="Studio Art page">
     <meta name="author" content="Camryn Melendez">
 
+    <style>
+    body {
+        background-color: white;
+    }
+    img{
+        width: 300px;
+    }
+    </style>
+
 </head>
 
 <body>
@@ -72,8 +81,68 @@
     <div class="imgItem">
         <p> Acrylic on Canvas Board. 2017, San Diego, CA.</p>
         <img src="images\BlueDoor.jpg" 
-            alt="Blue rusted door painting" width="400">
+            alt="Blue rusted door painting">
 
     </div>
 
+    <div class="imgItem">
+            <p> Oil pastel and water color. 2016, San Diego, CA.</p>
+            <img src="images/GirlInMirror.jpg" 
+                alt="Girl looking in makeup mirror">
+    </div>
+
+    <div class="imgItem">
+            <p> Graphite. 2016, San Diego, CA.</p>
+            <img src="images/Books.jpg" 
+                alt="Dusty books on a shelf">
+    </div>
+
+    <div class="imgItem">
+            <p> Water color and colored pencil. 2017, San Diego, CA.</p>
+            <img src="images/PinkFlowers.jpg" 
+                alt="Delicate pink flower">
+    </div>
+
+    <div class="imgItem">
+            <p> Scratch board using xacto knife. 2016, San Diego, CA.</p>
+            <img src="images/market.jpg" 
+                alt="Clock on old decaying wooden wall">
+    </div>
+
+    <div class="imgItem">
+            <p> Colored Pencil. 2016, San Diego, CA. Completed in 24 hours.</p>
+            <img src="images/RoomColoredPencils.jpg" 
+                alt="Old dusty room with a large window and a couch">
+    </div>
+
+    <div class="imgItem">
+            <p> Acrylic on paper. 2016, San Diego, CA.</p>
+            <img src="images/Shell.jpg" 
+                alt="Colorful seashell on the shore">
+    </div>
+
+    <div class="imgItem">
+            <p> Oil Pastel. 2018, San Diego, CA.</p>
+            <img src="images/Silverware.jpg" 
+                alt="Silverware resting on a plate">
+    </div>
+
+    <div class="imgItem">
+            <p> Graphite. 2018, San Diego, CA.</p>
+            <img src="images/Telephone.jpg" 
+                alt="Old-fashion telephone">
+    </div>
+    <center>
+    <button class="button" id="back-to-top" onclick="backToTop()">
+        Back To Top
+    </button>
+    </center>
+
+    <div style="padding: 50px;"></div>
+    
+    
+    <script>
+    function backToTop() {
+        window.scrollTo(0, 0);
+}</script>
 </body>
