--- a/about.html
+++ b/about.html
@@ -37,7 +37,8 @@
         </script>
 
         <div class="imgItem">
-            <p>This website was created in Visual Studio code, written in HTML and CSS. </p>
+            <p>This website was created in Visual Studio code, written in HTML and CSS and a 
+                touch of javascript. </p>
             <a href="#" onmouseover="imgOver('first')" onmouseout="imgOut('first')">
             <img src="images/me.jpg" alt="photo of me" id="first" height="400">
             </a>
