--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -16,6 +16,12 @@
         <title>Graphic Design</title>
         <meta name="description" content="Studio Art page">
         <meta name="author" content="Camryn Melendez">
+
+        <style>
+                img{
+                    width: 300px;
+                }
+                </style>
             
     </head>
     
@@ -27,19 +33,19 @@
         <div class= "imgItem">
             <p> Adobe Illustrator. 2016, San Diego, CA.</p>
         <img src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg" 
-            alt="Vintage inspired 50's housewife zombie poster made in illustrator" width="400">
+            alt="Vintage inspired 50's housewife zombie poster made in illustrator">
         </div>
 
         <div class="imgItem">
             <p>Portrait of Leonardo DiCaprio created in Adobe Illustrator. 2018, Boston, MA.</p>
             <img src="images/LeonardoDiCaprioPortrait [Recovered].jpg"
-            alt="Graphic depiction of the famous actor Leonardo DiCaprio." width="400">
+            alt="Graphic depiction of the famous actor Leonardo DiCaprio.">
         </div>
 
         <div class="imgItem">
                 <p>Succulent Icon created in Adobe Illustrator. 2018, Boston, MA.</p>
                 <img src="images/GraphicDesignPlant.jpg"
-                alt="Graphic depiction of a succulent." width="400">
+                alt="Graphic depiction of a succulent.">
             </div>
     </body>
 </html>
