added link to github repo

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             }
         </script>
 
-        <div class="imgItem">
+        <div class="imgItem" style="text-align: justify;">
             <p>This website was created in Visual Studio code, written in HTML and CSS and a 
                 touch of javascript. </p>
             <a href="#" onmouseover="imgOver('first')" onmouseout="imgOut('first')">
@@ -62,7 +62,13 @@
                 }
             </script>
         </div>
-        </center> 
+        
+
+        <div style="padding: 50px;">
+        <a href="https://github.com/Camryn-Melendez/Camryn-Melendez.github.io">Go to GitHub!</a>
+        </p>
+    </div>
+</center> 
 
              
         <script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js"></script> 
