updated about, index, and graphic design

--- a/Studio Art.html
+++ b/Studio Art.html
@@ -18,13 +18,13 @@
     <meta name="author" content="Camryn Melendez">
 
     <style>
-    body {
-        background-color: white;
-    }
-    img{
-        width: 300px;
-    }
-    </style>
+        body {
+            background-color: white;
+        }
+        img{
+            width: 300px;
+        }
+        </style>
 
 </head>
 
@@ -35,10 +35,11 @@
         </p>
         <p class= "subheading">All artwork created by Camryn Melendez</p>
     </div>
+
     <div class="imgItem">
         <p> Water color and colored pencil. 2016, San Diego, CA.</p>
         <img src="images/StudioArt (2).jpg" 
-            alt="Monster girl painted with watercolors" width="400">
+            alt="Monster girl painted with watercolors">
     </div>
 
     <div class="imgItem">
@@ -48,7 +49,7 @@
             at the San Diego Museum of Art.
         </p>
         <img  src="images/StudioArt.jpg" 
-                    alt="Peaches drawn with oil pastel" width="400">
+                    alt="Peaches drawn with oil pastel">
     </div>
 
     <div class="imgItem">
@@ -57,7 +58,7 @@
             dripping water effect and copper colored paint.
         </p>
         <img src="images/GreenStature.jpg" 
-            alt="Decaying copper statue" width="400" >
+            alt="Decaying copper statue">
     </div>              
 
     <div class="imgItem"> 
@@ -67,7 +68,7 @@
             gold paint and stamping.
         </p>
         <img  src="images/PurpleFLowers.jpg" 
-                    alt="Black and white flowers on purple background" width="400" >
+                    alt="Black and white flowers on purple background">
     </div>
     <div class="imgItem">    
         <p>
@@ -76,7 +77,7 @@
             sharp lines.
         </p>
         <img  src="images/SadBoy.jpg" 
-            alt="Sad boy drawn in oil pastel" width="400" >
+            alt="Sad boy drawn in oil pastel">
     </div>
     <div class="imgItem">
         <p> Acrylic on Canvas Board. 2017, San Diego, CA.</p>
@@ -123,8 +124,7 @@
 
     <div class="imgItem">
             <p> Oil Pastel. 2018, San Diego, CA.</p>
-            <img src="images/Silverware.jpg" 
-                alt="Silverware resting on a plate">
+            <img src="images/Silverware.jpg" >
     </div>
 
     <div class="imgItem">
