--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -47,5 +47,11 @@
                 <img src="images/GraphicDesignPlant.jpg"
                 alt="Graphic depiction of a succulent.">
             </div>
+
+            <div class="imgItem">
+                    <p>Succulent Icon created in Adobe Illustrator. 2018, Boston, MA.</p>
+                    <img src="images/AssignmentOneCamrynMelendez2-04.jpg"
+                    alt="Graphic depiction of a succulent.">
+                </div>
     </body>
 </html>
