updated skills page

--- a/csskills.html
+++ b/csskills.html
@@ -1,3 +1,24 @@
-<script type="text/javascript">
-    alert("Skills page coming soon!")
-    </script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Skills</title>
+        <link rel="stylesheet" href="skills.css" title="Skills Styles"/>
+    </head>
+    <body>
+        <script type="text/javascript">
+            alert("Skills page coming soon!")
+        </script>
+
+        <div class="header">
+            <div class="title">Skills</div> 
+            <p ID="sub-header">Technologies, languages, and tools I have come to know and love.</p>
+        </div>
+        <div class="page-content">
+            <div class="side-bar">sidebar
+            </div>
+            <div class="main-content"> main-content</div>
+        </div>
+    </body>
+</html>
+
+
