revamped studio art page/stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--Your CSS-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css" tyle="text/css">
 
     <title>Camryn Melendez</title>
     <meta name="description" content="My website">
@@ -35,7 +35,7 @@
                         Art
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="Studio Art.html">Studio Art</a>
+                        <a class="dropdown-item" href="studioart.html">Studio Art</a>
                         <a class="dropdown-item" href="graphicdesign.html">Graphic Design</a>
                         <div class="dropdown-divider"></div>
                     </div>
@@ -46,9 +46,9 @@
                         Computer Science
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="csskills.html">Skills</a>
-                        <a class="dropdown-item" href="csexperience.html">Experience</a>
-                        <a class="dropdown-item" href="csprojects.html">Projects</a>
+                        <a class="dropdown-item" href="skills.html">Skills</a>
+                        <a class="dropdown-item" href="experience.html">Experience</a>
+                        <a class="dropdown-item" href="projects.html">Projects</a>
                         <div class="dropdown-divider"></div>
                     </div>
                 </li>
@@ -78,7 +78,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Studio Art</h5>
                     <p class="card-text">View atwork from 2014 to present in a variety of mediums.</p>
-                    <a href="Studio Art.html" class="btn btn-primary">Let's go!</a>
+                    <a href="studioart.html" class="btn btn-primary">Let's go!</a>
                 </div>
             </div>
             <div class="card col-12 col-md-4" style="width: 18rem;">
