--- a/src/studioart.html
+++ b/src/studioart.html
@@ -2,147 +2,135 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--Your CSS-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/studioart.css" type="text/css">
 
     <title>Studio Art</title>
     <meta name="description" content="Studio Art page">
     <meta name="author" content="Camryn Melendez">
-
-    <style>
-        body {
-            background-color: white;
-        }
-        img{
-            width: 300px;
-        }
-        </style>
-
 </head>
 
 <body>
-    <div class="header" >
-        <p>
-            Studio Art
-        </p>
-        <p class= "subheading">All artwork created by Camryn Melendez</p>
+
+    <div class="header">
+        <div class="title">Studio Art</div> 
+        <p ID="sub-header">A collection of my artwork in various forms and media.</p>
     </div>
 
-    <div class="imgItem">
-        <p> Water color and colored pencil. 2016, San Diego, CA.</p>
-        <img src="images/StudioArt (2).jpg" 
-            alt="Monster girl painted with watercolors">
-    </div>
+    <div class="page-content">
 
-    <div class="imgItem">
-        <p>
-            Oil Pastel. 2017, San Diego, CA. 
-            Displayed in the 2017 Young Art exhibition
-            at the San Diego Museum of Art.
-        </p>
-        <img  src="images/StudioArt.jpg" 
-                    alt="Peaches drawn with oil pastel">
-    </div>
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/StudioArt (2).jpg" alt="Monster girl painted with watercolors"> 
+            </div>
+            <p> Water color and colored pencil. 2016, San Diego, CA.</p>
+        </div>
 
-    <div class="imgItem">
-        <p>
-            Acyrylic and Water. 2017, San Diego, CA. Background created with 
-            dripping water effect and copper colored paint.
-        </p>
-        <img src="images/GreenStature.jpg" 
-            alt="Decaying copper statue">
-    </div>              
+        <div class="img-block">
+            <div class="img-crop">
+                <img  src="images/StudioArt.jpg" alt="Peaches drawn with oil pastel">
+            </div>
+            <p>Oil Pastel. 2017, San Diego, CA. Displayed in the 2017 Young Art exhibition at the San Diego Museum of Art.</p>
+        </div>
 
-    <div class="imgItem"> 
-        <p>
-            Charcoal overlay on tempera. 2016, San Diego, CA. 
-            Gold flecks created by dabbing a crumples paper towel in
-            gold paint and stamping.
-        </p>
-        <img  src="images/PurpleFLowers.jpg" 
-                    alt="Black and white flowers on purple background">
-    </div>
-    <div class="imgItem">    
-        <p>
-            Oil Pastel. 2016, San Diego, CA. Details achieved by 
-            scratching the pastel with an xacto knife, creating
-            sharp lines.
-        </p>
-        <img  src="images/SadBoy.jpg" 
-            alt="Sad boy drawn in oil pastel">
-    </div>
-    <div class="imgItem">
-        <p> Acrylic on Canvas Board. 2017, San Diego, CA.</p>
-        <img src="images\BlueDoor.jpg" 
-            alt="Blue rusted door painting">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/GreenStature.jpg" 
+                alt="Decaying copper statue">
+            </div>
+            <p>Acyrylic and Water. 2017, San Diego, CA. Background created with dripping water effect and copper colored paint.</p>
+        </div>
 
-    </div>
+        <div class="img-block"> 
+            <div class="img-crop">
+                <img  src="images/PurpleFLowers.jpg" 
+                alt="Black and white flowers on purple background">
+            </div>
+            <p>Charcoal overlay on tempera. 2016, San Diego, CA. Gold flecks created by dabbing a crumples paper towel in gold paint and stamping.</p>
+        </div>
+        <div class="img-block">
+            <div class="img-crop">
+                <img  src="images/SadBoy.jpg" 
+                alt="Sad boy drawn in oil pastel">
+            </div>
+            <p>Oil Pastel. 2016, San Diego, CA. Details achieved by scratching the pastel with an xacto knife, creating sharp lines.</p>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images\BlueDoor.jpg" alt="Blue rusted door painting">
+            </div>
+            <p> Acrylic on Canvas Board. 2017, San Diego, CA.</p>
+        </div>
+
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/GirlInMirror.jpg" alt="Girl looking in makeup mirror">
+            </div>
             <p> Oil pastel and water color. 2016, San Diego, CA.</p>
-            <img src="images/GirlInMirror.jpg" 
-                alt="Girl looking in makeup mirror">
-    </div>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/Books.jpg" alt="Dusty books on a shelf">
+            </div>
             <p> Graphite. 2016, San Diego, CA.</p>
-            <img src="images/Books.jpg" 
-                alt="Dusty books on a shelf">
-    </div>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/PinkFlowers.jpg" alt="Delicate pink flower">
+            </div>
             <p> Water color and colored pencil. 2017, San Diego, CA.</p>
-            <img src="images/PinkFlowers.jpg" 
-                alt="Delicate pink flower">
-    </div>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/market.jpg" alt="Clock on old decaying wooden wall">
+            </div>
             <p> Scratch board using xacto knife. 2016, San Diego, CA.</p>
-            <img src="images/market.jpg" 
-                alt="Clock on old decaying wooden wall">
-    </div>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/RoomColoredPencils.jpg" alt="Old dusty room with a large window and a couch">
+            </div>
             <p> Colored Pencil. 2016, San Diego, CA. Completed in 24 hours.</p>
-            <img src="images/RoomColoredPencils.jpg" 
-                alt="Old dusty room with a large window and a couch">
-    </div>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/Shell.jpg" alt="Colorful seashell on the shore">
+            </div>
             <p> Acrylic on paper. 2016, San Diego, CA.</p>
-            <img src="images/Shell.jpg" 
-                alt="Colorful seashell on the shore">
-    </div>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/Silverware.jpg" >
+            </div>
             <p> Oil Pastel. 2018, San Diego, CA.</p>
-            <img src="images/Silverware.jpg" >
-    </div>
+        </div>
 
-    <div class="imgItem">
+        <div class="img-block">
+            <div class="img-crop">
+                <img src="images/Telephone.jpg" alt="Old-fashion telephone">
+            </div>
             <p> Graphite. 2018, San Diego, CA.</p>
-            <img src="images/Telephone.jpg" 
-                alt="Old-fashion telephone">
-    </div>
-    <center>
-    <button class="button" id="back-to-top" onclick="backToTop()">
+        </div>
+    </div> 
+
+    <button class="button" id="back-to-top-button" onclick="backToTop()">
         Back To Top
     </button>
-    </center>
 
-    <div style="padding: 50px;"></div>
-    
-    
     <script>
     function backToTop() {
         window.scrollTo(0, 0);
-}</script>
+} </script>
+
 </body>
